# lab_markdown_generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parser.rs  requester.rs
