[package]
name = "maker"
version = "0.1.0"
authors = ["Matthew Getgen"]
edition = "2021"

[[bin]]
name = "maker"
src = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
inquire = "0.5.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
html_parser = "0.6.3"
